# Bonsai

./: .gitignore  README.md  pyproject.toml
src/bonsai/: __init__.py  cli.py  config.json  config.py  processor.py  utils.py
tests/unit/: test_git_integration.py  test_ignore_patterns.py  test_tree_rendering.py
